--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         </repository>
     </repositories>
 
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
@@ -49,5 +50,17 @@
         <module>feo-api</module>
         <module>feo-app</module>
     </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.7</jdk.version>
+        <feo-business.version>0.1.0-SNAPSHOT</feo-business.version>
+        <spring.version>3.2.3.RELEASE</spring.version>
+        <spring.data.version>1.3.2.RELEASE</spring.data.version>
+        <slf4j.version>1.6.4</slf4j.version>
+        <jsonpath.version>0.8.1</jsonpath.version>
+        <jackson.version>2.2.1</jackson.version>
+        <jetty-maven-plugin.version>8.1.5.v20120716</jetty-maven-plugin.version>
+    </properties>
     
 </project>
